[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "selfscape_insight"
version = "0.3"
description = "Assorted visualizations and other representations of the data that Facebook collects"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Noah Duggan Erickson", email = "duggann@wwu.edu" },
    { name = "Liam Gore",            email = "gorel@wwu.edu" },
    { name = "Peter Hafner",         email = "hafnerp2@wwu.edu" },
    { name = "Carter Jacobs",        email = "jacobs81@wwu.edu" },
    { name = "Trevor Le",            email = "let38@wwu.edu" }
]
maintainers = [
    { name = "Dustin O'Hara", email = "oharad@wwu.edu"}
]
requires-python = ">=3.10"
dependencies = [
    "pyarrow",
    "pandas",
    "geopandas",
    "requests",
    "flatsplode",
    "maxminddb",
    "beautifulsoup4",
    "matplotlib",
    "spacy",
    "spacytextblob",
    "wordcloud",
    "plotly",
    "nbformat",
    "folium",
    "seaborn",
    "pillow",
    "tqdm"
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.urls]
WWU-CS = "https://cs.wwu.edu"
Source = "https://github.com/mindsresearch/selfscape_insight"

[project.scripts]
scape-cli = "selfscape_insight.main_cli:main"