[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "selfscape_insight"
version = "1.0rc1"
description = "Assorted visualizations and other representations of the data that Facebook collects"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Noah Duggan Erickson", email = "duggann@wwu.edu" },
    { name = "Liam Gore",            email = "gorel@wwu.edu" },
    { name = "Peter Hafner",         email = "hafnerp2@wwu.edu" },
    { name = "Carter Jacobs",        email = "jacobs81@wwu.edu" },
    { name = "Trevor Le",            email = "let38@wwu.edu" }
]
maintainers = [
    { name = "Dustin O'Hara", email = "oharad@wwu.edu"}
]
requires-python = ">=3.10"
dependencies = [
    "pyarrow >=15.0.2",
    "pandas >=2.2.1",
    "geopandas >=0.14.3",
    "requests >=2.31.0",
    "maxminddb >=2.6.0",
    "beautifulsoup4 >=4.12.3",
    "matplotlib >=3.8.4",
    "spacy >=3.7.4",
    "spacytextblob >=4.0.0",
    "wordcloud >=1.9.3",
    "plotly >=5.20.0",
    "nbformat >=5.10.4",
    "folium >=0.16.0",
    "seaborn >=0.13.2",
    "pillow >=10.3.0",
    "tqdm >=4.66.2"
]
classifiers = [
    "Private :: Do Not Upload",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
doc = [
    "sphinx >=7.2.6",
    "pydata-sphinx-theme >=0.15.2",
    "sphinx_design >=0.5.0",
    "rstcloth >=0.6.0"
]

[project.urls]
WWU-CS = "https://cs.wwu.edu"
Source = "https://github.com/mindsresearch/selfscape_insight"

[project.scripts]
scape-cli = "selfscape_insight.exec_cli:exec"
scape-gui = "selfscape_insight.exec_wiz:exec"